tests/bad/declare-printf-function.pas
program declare_printf_function;

function printf;
begin
    printf := 1
end;

begin
end.
